Added new structure for interfaces and access_point component

--- a/connectivity/components/access_point/CMakeLists.txt
+++ b/connectivity/components/access_point/CMakeLists.txt
@@ -1,2 +1,3 @@
-idf_component_register(SRCS "main.c"
-                    INCLUDE_DIRS ".")
+idf_component_register(SRCS "access_point.c"
+                    INCLUDE_DIRS "."
+                    REQUIRES esp_wifi nvs_flash esp_event)
