Added station component

--- a/connectivity/components/device/CMakeLists.txt
+++ b/connectivity/components/device/CMakeLists.txt
@@ -1,3 +1,3 @@
 idf_component_register(SRCS "device.c"
                     INCLUDE_DIRS "."
-                    REQUIRES access_point esp_wifi nvs_flash esp_event server)
+                    REQUIRES access_point station esp_wifi nvs_flash esp_event server)
