--- a/connectivity/components/client/CMakeLists.txt
+++ b/connectivity/components/client/CMakeLists.txt
@@ -1,3 +1,3 @@
-idf_component_register(SRCS "tcp_client.c"
+idf_component_register(SRCS "client.c"
                                 INCLUDE_DIRS "."
                                 REQUIRES esp_event esp_netif)
